# HTL-ETRacingTeam_Stromrichter

C++_stm32_test/stm32f103c8_cpp_test/: .cproject  .project  stm32f103c8_cpp_test.ioc
C++_stm32_test/stm32f103c8_cpp_test/Core/Inc/: main.h
C++_stm32_test/stm32f103c8_cpp_test/Core/Src/: main.c
GateDriver_Test/Firmware_V1.0/: .cproject  .project  Firmware_V1.0 Debug.launch  Firmware_V1.0.ioc
GateDriver_Test/Firmware_V1.0/Core/Src/: main.c  stm32f1xx_hal_msp.c
GateDriver_Test/Firmware_V1.0/Core/Src/Regelungstechnik_lib/: Regelungstechnik.c
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.0_F4/: .cproject  .project  Firmware_V1.0_F4.ioc
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.0_F4/Core/Src/Regelungstechnik/: main.c
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.1_F4/: .cproject  .project  Firmware_V1.1_F4 Debug.launch  Firmware_V1.1_F4.ioc
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.1_F4/Core/Inc/: main.h  stm32f4xx_it.h
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.1_F4/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.1_F4/Core/Src/Clark_Transformation/: Clark_Transformation.c  Clark_Transformation.h
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.1_F4/Core/Src/Regelungstechnik_lib/: Regelungstechnik.c  Regelungstechnik.h
GateDriver_Test/Firmware_V1.0_F4/Firmware_V1.1_F4/Core/Src/THIPWM/: THIPWM.c  THIPWM.h
GateDriver_Test/Firmware_V1.0_F4/test_LV_board/: .cproject  .project  test_LV_board Debug.launch  test_LV_board.ioc
GateDriver_Test/Firmware_V1.0_F4/test_LV_board/Core/Src/: main.c
GateDriver_Test/LV_Platine/1_test/: .cproject  .project  1_test Debug.launch  1_test.ioc
GateDriver_Test/LV_Platine/1_test/Core/Src/: main.c
GateDriver_Test/LV_Platine/Stromrichter_V1.0/: .cproject  .project  Stromrichter_V1.0 Debug.launch  Stromrichter_V1.0.ioc
GateDriver_Test/LV_Platine/Stromrichter_V1.0/Core/Inc/: main.h  stm32f4xx_it.h
GateDriver_Test/LV_Platine/Stromrichter_V1.0/Core/Src/: adc1_var_init.h  adc3_endcoder_var.h  main.c  regler_transformationen_var.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  uart2_var_init.h
GateDriver_Test/LV_Platine/Stromrichter_V1.0/Core/Src/Regelungstechnik_lib/: Regelungstechnik.c  Regelungstechnik.h
GateDriver_Test/LV_Platine/Stromrichter_V1.0/Core/Src/THIPWM/: THIPWM.c  THIPWM.h
GateDriver_Test/test/: .cproject  test Debug.launch  test.ioc
GateDriver_Test/test/Core/Src/: main.c
Gate_Driver_GEN2/F4/Firmware_GateDriver_GEN2_1.0/: .cproject  .mxproject  .project  Firmware_GateDriver_GEN2_1.0.ioc
Gate_Driver_GEN2/F4/Firmware_GateDriver_GEN2_1.0/Core/Src/: main.c  stm32f4xx_hal_msp.c
Regelungstechik_V2.0/: CMakeLists.txt  library.h
Regelungstechnik/: CMakeLists.txt  main.c
Regelungstechnik/Regelungstechnik_lib/: Regelungstechnik.c
THIPWM/: THIPWM.h
Touchgfx/2_test/MyApplication/: .mxproject  STM32F746G_DISCO.ioc
Touchgfx/2_test/MyApplication/Core/Src/: main.c  stm32f7xx_hal_msp.c
Touchgfx/2_test/MyApplication/STM32CubeIDE/: .cproject  .project
Touchgfx/2_test/MyApplication/TouchGFX/: MyApplication.touchgfx
Touchgfx/2_test/MyApplication/TouchGFX/simulator/msvs/: Application.vcxproj.filters
Touchgfx/2_test/stromrichter_demo/: .cproject  .project  stromrichter_demo.ioc
Touchgfx/2_test/stromrichter_demo/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Touchgfx/GUI_windows/: CMakeLists.txt
Touchgfx/GUI_windows/Com_viso/: Com_viso.touchgfx
Touchgfx/GUI_windows/Com_viso/config/gcc/: app.mk
Touchgfx/GUI_windows/Com_viso/config/msvs/: Application.props
Touchgfx/GUI_windows/Com_viso/simulator/msvs/: Application.vcxproj.filters
Touchgfx/GUI_windows/Com_viso/touchgfx/os/: FreeRTOS.h
Touchgfx/GUI_windows/Kart_Display_V1_0/STM32CubeIDE/: .cproject  .project
Touchgfx/GUI_windows/Kart_Display_V1_0/TouchGFX/: Kart_Display_V1_0.touchgfx
Touchgfx/GUI_windows/Kart_Display_V1_0/TouchGFX/gui/include/gui/menue_screen/: menuePresenter.hpp  menueView.hpp
Touchgfx/GUI_windows/Kart_Display_V1_0/TouchGFX/gui/src/menue_screen/: menuePresenter.cpp  menueView.cpp
Touchgfx/GUI_windows/Kart_Display_V1_0/TouchGFX/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
Touchgfx/GUI_windows/TagderoffenenTur_Demo/STM32CubeIDE/: .cproject  .project
Touchgfx/GUI_windows/TagderoffenenTur_Demo/TouchGFX/: TagderoffenenTur_Demo.touchgfx
Touchgfx/GUI_windows/TagderoffenenTur_Demo/TouchGFX/assets/texts/: texts.xml
Touchgfx/GUI_windows/TagderoffenenTur_Demo/TouchGFX/simulator/msvs/: Application.vcxproj.filters
isolierter_dcdc/1_verion/: .cproject  .project  1_verion.ioc
isolierter_dcdc/1_verion/Core/Src/: main.c  stm32c0xx_hal_msp.c
nucleo_H745_test/1_test/: .project  1_test.ioc
nucleo_H745_test/1_test/CM4/: .cproject  .project
nucleo_H745_test/1_test/CM7/: .cproject  .project
wirless_test/wirless_test_1.0f/: .cproject  .mxproject  .project  STM32C011D6YX_FLASH.ld  wirless_test_1.0f.ioc
wirless_test/wirless_test_1.0f/Core/Src/: main.c  stm32c0xx_hal_msp.c
wirless_test/wirless_usb_test/: .cproject  .mxproject  .project  STM32F042T6YX_FLASH.ld  wirless_usb_test.ioc
wirless_test/wirless_usb_test/Core/Src/: main.c  stm32f0xx_hal_msp.c
workspace_adc_test/3adcchannels/: .cproject  .project  3adcchannels Debug.launch  3adcchannels.ioc
workspace_adc_test/3adcchannels/Core/Inc/: main.h
workspace_adc_test/3adcchannels/Core/Src/: main.c  stm32f7xx_hal_msp.c
workspace_adc_test/timer_test/: .cproject  timer_test Debug.launch  timer_test.ioc
workspace_adc_test/timer_test/Core/Inc/: main.h  stm32f7xx_hal_conf.h
workspace_adc_test/timer_test/Core/Src/: main.c  stm32f7xx_hal_msp.c
workspace_test/: CMakeLists.txt
workspace_test/GateDriver_Test/: .cproject  .project  GateDriver_Test Debug.launch  GateDriver_Test.ioc
workspace_test/Test_Git/: .cproject  Test_Git.ioc
workspace_test/Test_Git/Core/Src/: main.c  stm32f1xx_hal_msp.c
workspace_test/gatdriver_test2/: .cproject  .project  gatdriver_test2 Debug.launch  gatdriver_test2.ioc
workspace_test/gatdriver_test2/Core/Src/: main.c
(+8 files in other folders)
